# ProcessDataStreaming

kafka/: docker-compose.yml  kafka-init.sh
kafka/schemas/: heat_exchanger.avsc
process_producer/: Cargo.toml
process_producer/schemas/: heat_exchanger.avsc
process_producer/src/: distillation_column.rs  main.rs  producer.rs
spark_pipeline/: .pre-commit-config.yaml  main.py  pyproject.toml
spark_pipeline/schemas/: distillation_column.avsc  heat_exchanger.avsc
spark_pipeline/src/: main.py  spark.py  spark_session.py
spark_pipeline/src/pipelines/: distillation_pipeline.py  hx_pipeline.py
tcp_client/: Cargo.toml
tcp_client/schemas/: distilation_column.avsc  distillation_column.avsc  heat_exchanger.avsc
tcp_client/src/: consumer.rs  distillation_column.rs  heat_exchanger.rs  main.rs  producer.rs  schema_loader.rs
timescaledb/: docker-compose.yml  init_db.sh  tables.sql
