[package]
name = "tcp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rdkafka = "0.36.2"
tokio = {version = "1.40.0", features = ["full"]}
avro-rs = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = "1.19.0"